posting-service/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posting-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
